fix: Adjust theme toggle button position and update item icon width for better alignment

--- a/projects/mlpm-app/src/app/app.component.scss
+++ b/projects/mlpm-app/src/app/app.component.scss
@@ -36,7 +36,7 @@
           background-color: #424242;
 
           &:before {
-            transform: translateX(26px);
+            transform: translateX(30px);
             background-color: #ff4081;
           }
         }
